# metagpt-assignment

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
chapter3/: example.py  main.py
chapter4/: analyzer.py  callback.py  crawler.py  example.py  github-trending-raw.html  github-trending-slim-2.html  github-trending-slim.html  htmlutil.py  huggingface-paper-content-raw.html  huggingface-paper-content-slim.html  huggingface-papers-raw.html  huggingface-papers-slim-2.html  huggingface-papers-slim.html  main.py  watcher.py
chapter5/: fibonacci.py  writer.py
